<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="FragmentPreviousDetailBinding"
            type="hr.from.bkoruznjak.rida.history.PreviousRideDetailFragment" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/previousRideDetailFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewRides"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEndLocationTitle" />

        <View
            android:id="@+id/accentBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewRides"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewShadow"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="bottom"
            android:background="@drawable/shadow_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accentBackground" />

        <TextView
            android:id="@+id/textNoRidePointsToShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/you_have_no_ride_points_to_show"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewBookingIdTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/booking_id_title"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewBookingIdValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/textViewBookingIdTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textViewBookingIdTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewBookingIdTitle" />

        <TextView
            android:id="@+id/textViewPassengersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/number_of_passengers_title"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewBookingIdTitle" />

        <TextView
            android:id="@+id/textViewPassengersValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/textViewPassengersTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textViewPassengersTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewPassengersTitle" />

        <TextView
            android:id="@+id/textViewStartLocationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/start_location_title"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPassengersTitle" />

        <TextView
            android:id="@+id/textViewStartLocationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/textViewStartLocationTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textViewStartLocationTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewStartLocationTitle" />

        <TextView
            android:id="@+id/textViewEndLocationTitle"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/stop_location_title"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStartLocationTitle" />

        <TextView
            android:id="@+id/textViewEndLocaationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/textViewEndLocationTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textViewEndLocationTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewEndLocationTitle" />

    </android.support.constraint.ConstraintLayout>
</layout>