<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewRide"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    app:cardBackgroundColor="@color/colorPrimary"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="parent">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/time_title"
            android:textColor="@color/textWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewLatitudeTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textViewTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/textWhite"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTimeTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textViewTimeTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewTimeTitle" />

        <TextView
            android:id="@+id/textViewLatitudeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/latitude_title"
            android:textColor="@color/textWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewLongitudeTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTimeTitle" />

        <TextView
            android:id="@+id/textViewLatitudeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/textWhite"
            app:layout_constraintBottom_toBottomOf="@+id/textViewLatitudeTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textViewLatitudeTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewLatitudeTitle" />

        <TextView
            android:id="@+id/textViewLongitudeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/longitude_title"
            android:textColor="@color/textWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewStatusTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLatitudeTitle" />

        <TextView
            android:id="@+id/textViewLongitudeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/textWhite"
            app:layout_constraintBottom_toBottomOf="@+id/textViewLongitudeTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textViewLongitudeTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewLongitudeTitle" />

        <TextView
            android:id="@+id/textViewStatusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/status_title"
            android:textColor="@color/textWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLongitudeTitle" />

        <TextView
            android:id="@+id/textViewStatusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/textWhite"
            app:layout_constraintBottom_toBottomOf="@+id/textViewStatusTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textViewStatusTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewStatusTitle" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>


